# sniper

./: .env.example  .gitignore  Cargo.toml  README.md  ecosystem.config.cjs
.cursor/plans/: bot_hft_polymarket_rust_c0af38df.plan.md
logs/: session_2026-03-01T02-14-47.jsonl  session_2026-03-01T02-20-47.jsonl  session_2026-03-01T02-54-48.jsonl
src/: clob.rs  clob_ws_book.rs  config.rs  dedupe.rs  execution.rs  gamma.rs  main.rs  market.rs  orderbook.rs  position.rs  runner.rs  session_log.rs  signing.rs  strategy.rs  types.rs
