[package]
name = "sniper"
version = "0.1.0"
edition = "2021"
description = "Interval Sniper bot for Polymarket BTC/SOL 5m — buy in range, sell on TP/SL"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
urlencoding = "2"
async-trait = "0.1"

# Live CLOB: EIP-712 order signing + HMAC L2 auth
ethers = "2"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# ethers = { version = "2", features = ["abigen", "ws"] }  # optional for EIP-712 live orders

[[bin]]
name = "sniper"
path = "src/main.rs"
